--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/kubsu
+spring.datasource.url=jdbc:postgresql://localhost/kubsu?useUnicode=true&serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
