--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
-spring.datasource.url=jdbc:postgresql://localhost/kubsu?useUnicode=true&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost/kubsu
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=nullifake@yandex.ru
+spring.mail.password=06910691Nulli
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=false
+
+hostname=212.192.134.20
