--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=false
 
-hostname=212.192.134.20
+recaptcha.secret=6LfI7OoUAAAAAHG_0SDKPEmvI6W-sklAXYoAx2Zw
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
