--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,4 +17,4 @@ recaptcha.secret=6LfI7OoUAAAAAHG_0SDKPEmvI6W-sklAXYoAx2Zw
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
-hostname=54.93.53.237
+hostname=localhost:8080
