Добавление новых классов и методов для обновления логики программы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,15 +6,14 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.mail.host=smtp.yandex.ru
-spring.mail.username=nullifake@yandex.ru
-spring.mail.password=06910691Nulli
+spring.mail.username=alexandertipchikov
+spring.mail.password=fiibdhjwowaqazhm
 spring.mail.port=465
 spring.mail.protocol=smtps
+
 mail.debug=false
-
 recaptcha.secret=6LfI7OoUAAAAAHG_0SDKPEmvI6W-sklAXYoAx2Zw
-
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
-
-hostname=54.93.53.237
+upload.path=C:/Users/User/IdeaProjects/projectkubsu/uploads
+hostname=localhost
