Добавление новых классов и методов для обновления логики программы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ recaptcha.secret=6LfI7OoUAAAAAHG_0SDKPEmvI6W-sklAXYoAx2Zw
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 upload.path=C:/Users/User/IdeaProjects/projectkubsu/uploads
+errors.path=C:/Users/User/IdeaProjects/projectkubsu/files_with_errors_info
 hostname=localhost
