Добавление пагинации и исправление багов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.datasource.url=jdbc:postgresql://localhost/kubsu
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.mail.host=smtp.yandex.ru
-spring.mail.username=alexandertipchikov
+spring.mail.username=alexandertipchikov@yandex.ru
 spring.mail.password=fiibdhjwowaqazhm
 spring.mail.port=465
 spring.mail.protocol=smtps
@@ -17,4 +17,4 @@ spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 upload.path=C:/Users/User/IdeaProjects/projectkubsu/uploads
 errors.path=C:/Users/User/IdeaProjects/projectkubsu/files_with_errors_info
-hostname=localhost
+hostname=localhost:8080
