Добавление пагинации и исправление багов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ mail.debug=false
 recaptcha.secret=6LfI7OoUAAAAAHG_0SDKPEmvI6W-sklAXYoAx2Zw
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
-upload.path=C:/Users/User/IdeaProjects/projectkubsu/uploads
-errors.path=C:/Users/User/IdeaProjects/projectkubsu/files_with_errors_info
+upload.path=/C:/Users/User/IdeaProjects/projectkubsu/uploads
+errors.path=/C:/Users/User/IdeaProjects/projectkubsu/files_with_errors_info
 hostname=localhost:8080
