--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 upload.path=/C:/Users/User/IdeaProjects/projectkubsu/uploads
 errors.path=/C:/Users/User/IdeaProjects/projectkubsu/files_with_errors_info
+warnings.path=/C:/Users/User/IdeaProjects/projectkubsu/files_with_warnings_info
 hostname=localhost:8080
